--- a/css/fluid-typo.css
+++ b/css/fluid-typo.css
@@ -4,6 +4,9 @@
 
 body {
   background-color: gray;
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap);
 }
 
 main {
